[gd_scene load_steps=11 format=2]

[ext_resource path="res://Scenes/Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scenes/Enemy.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scripts/EnemyManager.gd" type="Script" id=3]
[ext_resource path="res://Scripts/Game.gd" type="Script" id=4]
[ext_resource path="res://Fonts/ARCADECLASSIC.TTF" type="DynamicFontData" id=5]
[ext_resource path="res://Sprites/background-black.png" type="Texture" id=6]
[ext_resource path="res://Scripts/AudioPlayer.gd" type="Script" id=7]

[sub_resource type="SegmentShape2D" id=1]
b = Vector2( -0.481384, 607.512 )

[sub_resource type="SegmentShape2D" id=2]
a = Vector2( 1025.09, -2.28975 )
b = Vector2( 1022.57, 602.472 )

[sub_resource type="DynamicFont" id=3]
size = 64
font_data = ExtResource( 5 )

[node name="Game" type="Node2D"]
script = ExtResource( 4 )

[node name="Player" parent="." instance=ExtResource( 1 )]
position = Vector2( 512, 540 )
shot_interval = 0.5

[node name="EnemyManager" type="Node2D" parent="."]
script = ExtResource( 3 )

[node name="Enemy" parent="EnemyManager" instance=ExtResource( 2 )]
position = Vector2( 512, 60 )

[node name="Walls" type="StaticBody2D" parent="."]

[node name="LeftWall" type="CollisionShape2D" parent="Walls"]
shape = SubResource( 1 )

[node name="RightWall" type="CollisionShape2D" parent="Walls"]
shape = SubResource( 2 )

[node name="ScoreText" type="Label" parent="."]
margin_left = 136.071
margin_top = 171.349
margin_right = 176.071
margin_bottom = 204.349
custom_fonts/font = SubResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="background-black" type="Sprite" parent="."]
position = Vector2( 512.937, 300.091 )
scale = Vector2( 2.55915, 1.51657 )
z_index = -1
texture = ExtResource( 6 )

[node name="AudioPlayer" type="Node2D" parent="."]
script = ExtResource( 7 )
explosion_volume_db = -10.0
laser_volume_db = -20.0
success_volume_db = -10.0

[connection signal="on_death" from="Player" to="." method="_on_player_death"]
[connection signal="on_enemy_death" from="EnemyManager" to="." method="_on_enemy_death"]
